--- a/src/app/body/team-details/edit-label-prop/edit-label-prop.component.css
+++ b/src/app/body/team-details/edit-label-prop/edit-label-prop.component.css
@@ -101,13 +101,24 @@ input:focus {
 #date {
     color: var(--text);
 }
+
 .dropdown-menu {
     width: 300px;
     height: auto;
     max-height: 300px;
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: var(--secondary-bg);
     color: var(--text);
     border-radius: 2%;
     box-shadow: var(--box-shadow-bottom);
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-color); 
+    border-radius: 10px;
 }
